# gawain

./: .gitignore  LICENSE.md  README.md  RT.prof  gawain_notes.md  nonlinear_run.pkl  pyproject.toml  requirements.txt  setup.py  sod_shock_tube.pkl  sod_shock_tube_soft.pkl
docs/: example_gawain_notebook_briowu.ipynb  example_plotting.ipynb
docs/hydro_tests/: run_int_blast_wave.py  run_kelvin_helmholtz.py  run_rayleigh_taylor.py  run_sedov_wave.py  run_sod.py
docs/mhd_tests/: run_alfven_wave.py  run_current_sheet.py  run_linear_wave.py  run_mhd_rotor.py  run_orszag_tang.py
example_scripts/: create_run.py  create_run_sod.py  example_gawain_notebook.ipynb  example_gawain_notebook_briowu.ipynb  example_plotting.ipynb  input_test_run.pkl  sod_shock_tube_soft.pkl
example_scripts/hydro_tests/: create_run_blast_wave.py  create_run_kelvin_helmholtz.py  create_run_lid_cavity.py  create_run_mach_reflect.py  create_run_rayleigh_taylor.py  create_run_sedov_wave.py  create_run_sod.py  create_run_sod_soft.py  run_blast_wave.py  run_int_blast_wave.py  run_kelvin_helmholtz.py  run_kh.py  run_rayleigh_taylor.py  run_sedov_wave.py  run_sod.py
example_scripts/mhd_tests/: run_alfven_wave.py  run_current_sheet.py  run_linear_wave.py  run_mhd_rotor.py  run_orszag_tang.py
example_scripts/sod_shock_tube/: gawain_output_0.h5  gawain_output_1.h5  gawain_output_10.h5  gawain_output_100.h5  gawain_output_11.h5  gawain_output_12.h5  (+95 more)
gawain/: arg.py  fluxes.py  integrators.py  io.py  main.py  numerics.py  physics.py  run_gawain.py
gawain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
output/: example_analysis.ipynb
paper/: paper.md
tests/: input_test.py
(+1260 files in other folders)
