[project]
name = "gawain"
version = "0.1.0"
description = "A 2D magnetohydrodynamic simulation code written in python."
authors = [
    { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" }
]
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib>=3.9.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "black>=24.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gawain"]
