[project]
name = "gawain"
version = "0.1.0"
description = "A 2D magnetohydrodynamic simulation code written in python."
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "matplotlib>=3.10.5",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]
